src/test/deca/syntax/invalid/homemade/test/test_pars_inv_decla_variable_oubli_accolade_debut.deca
// Description:
//    tests de programme incorrect syntaxiquement pour la déclaration de variable
//
// Resultats:
//    Ligne 11 : Erreur (oubli {)
//    
//
// Historique:
//    cree le 04/01/2023

    int x = 5; }
